boo-boo, portfolio and contact non-resposive, added meta viewport

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,10 +266,10 @@ a:hover {
   }
 
   /* For testing which screen size I'm on  */
-  /* #about-me,
+  #about-me,
   #request-contact-form,
   #portfolio-container 
   {
     background-color: orangered;
-  } */
+  }
 }
